chore: cleanup item connector block and blockentity code a bit