@@ -16,7 +16,7 @@ import net.minecraft.network.protocol.game.ClientGamePacketListener;
 import net.minecraft.network.protocol.game.ClientboundBlockEntityDataPacket;
 import net.minecraft.world.level.block.Block;
 import net.minecraft.world.level.block.state.BlockState;
-import net.minecraft.world.level.block.state.properties.BlockStateProperties;
+import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
 public class LogisticsItemInserterBlockEntity extends LogisticsItemConnectorBlockEntity {
@@ -32,14 +32,14 @@ public class LogisticsItemInserterBlockEntity extends LogisticsItemConnectorBloc
     }
 
     @Override
-    public CompoundTag getUpdateTag(HolderLookup.Provider pRegistries) {
+    public @NotNull CompoundTag getUpdateTag(HolderLookup.@NotNull Provider pRegistries) {
         var tag = new CompoundTag();
         this.writeNetwork(tag, pRegistries);
         return tag;
     }
 
     @Override
-    public void handleUpdateTag(CompoundTag tag, HolderLookup.Provider pRegistries) {
+    public void handleUpdateTag(@NotNull CompoundTag tag, HolderLookup.@NotNull Provider pRegistries) {
         this.readNetwork(tag, pRegistries);
     }
 
@@ -50,7 +50,7 @@ public class LogisticsItemInserterBlockEntity extends LogisticsItemConnectorBloc
     }
 
     @Override
-    public void onDataPacket(Connection connection, ClientboundBlockEntityDataPacket packet, HolderLookup.Provider pRegistries) {
+    public void onDataPacket(@NotNull Connection connection, ClientboundBlockEntityDataPacket packet, HolderLookup.@NotNull Provider pRegistries) {
         var tag = packet.getTag();
         if (tag != null) {
             this.readNetwork(tag, pRegistries);
@@ -98,7 +98,7 @@ public class LogisticsItemInserterBlockEntity extends LogisticsItemConnectorBloc
 
     @Override
     public BlockPos targetPos() {
-        return this.leafNode().targets().isEmpty() ? this.getBlockPos() : this.leafNode().targets().get(0);
+        return this.leafNode().targets().isEmpty() ? this.getBlockPos() : this.leafNode().targets().getFirst();
     }
 
     @Override
